--- a/styleEncriptador.css
+++ b/styleEncriptador.css
@@ -33,7 +33,7 @@ main{
 
 .mensaje{
     background:white;
-    background-image: url("/imagenes/Muñeco.png");
+    background-image: url("./imagenes/Muñeco.png");
     background-repeat:no-repeat;
     border:none;
     border-radius:24px;
