--- a/styleEncriptador.css
+++ b/styleEncriptador.css
@@ -2,12 +2,13 @@
     background: #F3F5FC;
     font-family: "Inter";
     font-weight: 400;
-    font-size: 32px;
+    font-size: 1.4em;
     line-height: 150%;
 }
 
 .logo{
-    padding-top: 20px;
+    display: inline-block;
+    padding-top: 3%;
     margin-left: 0%;
     width: 10%;
     
@@ -15,14 +16,13 @@
 
 main{
     display: flex;
-    margin-bottom: 20px;
-    margin-left: 80px;
+    margin-left: 8%;
 }
 
 .textArea{
     border:none;
     color:#0A3871;
-    margin-top: 90px;
+    margin-top: 10%;
     resize:none;
 }
 
@@ -36,16 +36,17 @@ main{
     flex-direction: column;
     width: 400px;
     height: 580px;
-    margin-left: 300px;
+    margin-left: 20%;
     background:white;
     border:none;
-    border-radius:24px;
+    border-radius:8%;
+    border:1px solid #0A3871;
     
 }
 
 .llamadaAccion{
     order:2;
-    margin-top:430px;
+    margin-top:100%;
     text-align: center;
     line-height: 1.5;
     font-weight: bold;
@@ -56,13 +57,13 @@ main{
 }
 
 .llamadaAccion p:nth-of-type(1){
-    font-size:20px;
+    font-size:1em;
     background:white;
    
 }
 
 .llamadaAccion p:nth-of-type(2){
-    font-size:15px;
+    font-size:0.7em;
     background:white;
    
 }
@@ -74,8 +75,8 @@ main{
     background-repeat:no-repeat;
     border:none;
     color:#0A3871;
-    margin-left:15px;
-    margin-top:10px;
+    margin-left:1.5%;
+    margin-top:0.8%;
     position:fixed;
     resize:none;
     
@@ -87,7 +88,7 @@ main{
 
 .botones{
     display:flex;
-    margin-top: 18px;
+    margin-top: 6%;
     
 }
 
@@ -97,8 +98,9 @@ main{
     border-radius: 24px;
     color:white;
     cursor:pointer;
-    height: 67px;
-    width: 328px;
+    height: 100%;
+    width: 100%;
+    margin-left: 0.5%;
     transition: 0.2s ease-in-out;
     
 }
@@ -113,9 +115,9 @@ main{
     border-radius: 24px;
     color:#0A3871;
     cursor:pointer;
-    height: 67px;
-    margin-left: 30px;
-    width: 328px;
+    height: 100%;
+    margin-left: 3%;
+    width: 100%;
     transition: 0.2s ease-in-out;
     
 
@@ -131,11 +133,11 @@ main{
     border-radius:24px;
     color:#0A3871;
     cursor:pointer;
-    height: 67px;
-    margin-left: 33px;
-    margin-top:510px;
+    height: 7%;
+    margin-left: 3%;
+    margin-top:33%;
     position:absolute;
-    width: 336px;
+    width: 21%;
     transition: 0.2s ease-in-out;
     
 }
@@ -147,7 +149,9 @@ main{
 
 .informacion{
     color:#495057;
-    font-size: 15px;
+    font-size: 0.8em;
+    margin-top: 10%;
+    margin-left: 1%;
 }
 
 .informacion::before {
@@ -164,10 +168,8 @@ main{
 footer{
     display: inline-block;
     margin-top: 0% ;
-    margin-left: 100px;
-    font-size: 13px;
+    margin-left: 8.3%;
+    font-size: 0.7em;
     color:#495057;
     
-    
-
 }
