--- a/styleEncriptador.css
+++ b/styleEncriptador.css
@@ -11,7 +11,7 @@
     padding-top: 3%;
     margin-left: 0%;
     width: 10%;
-    
+
 }
 
 main{
@@ -24,6 +24,7 @@ main{
     color:#0A3871;
     margin-top: 10%;
     resize:none;
+
 }
 
 ::placeholder {color:#0A3871;}
@@ -40,7 +41,6 @@ main{
     background:white;
     border:none;
     border-radius:8%;
-    border:1px solid #0A3871;
     
 }
 
@@ -173,3 +173,109 @@ footer{
     color:#495057;
     
 }
+
+@media only screen and (max-width: 600px){
+
+    body{
+        display:flex;
+        flex-direction: column;
+        
+    }
+
+    .logo{
+        display: inline-block;
+        padding-top: 5%;
+        margin-left: 42%;
+        width: 20%;
+    }
+    main{
+        flex-direction: column;
+        width: 90%;
+        margin-left: 20%;
+    }
+    .textArea {
+        margin-top: 5%;
+        font-size: 14px;
+    }
+    .textArea::placeholder {
+        text-align: center;
+        padding-top: 20%;
+      }
+    .resultado{
+        display:flex;
+        flex-direction: column;
+        width: 60%;
+        height: 300px;
+        margin-left: 2%;
+    }
+    .llamadaAccion{
+        margin-top: 101%;
+        
+    }
+    .llamadaAccion p:nth-of-type(1){
+        font-size:0.5em;
+       
+       
+    }
+    .llamadaAccion p:nth-of-type(2){
+        font-size:0.3em;
+       
+       
+    }
+    .mensaje{
+        margin-top: 5%;
+        margin-left: 7%;
+        width: 40%;
+        height: 20%;
+        background-size: 100%;
+        font-size: 1em;
+    }
+    .botones{
+        flex-direction: column;
+        margin-top: 6%;
+        margin-bottom: 5%;
+        
+    }
+    .botonEncriptar{
+        height: 10%;
+        width: 50%;
+        margin-left: 8%;
+        font-size: 1em;
+        
+    }
+    .botonDesencriptar{
+        height: 10%;
+        width: 50%;
+        margin-left: 8%;
+        margin-top: 10px;
+        font-size: 0.9em;
+       
+
+        
+    
+    }
+    .botonCopiar{
+        margin-top: 62%;
+        height: 1.6em;
+        width: 7em;
+        margin-left: 8%;
+        font-size: 1em;
+       
+        
+    }
+    .informacion{
+        font-size: 0.3em;
+        margin-bottom: -20px;
+        margin-left: 13%;
+        
+    }
+    footer{
+        margin-top: 17%;
+        margin-left: 16%;
+        font-size: 0.5em;
+        
+    }
+}
+
+
+
